--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.26.0",
+    "cors": "^2.8.5",
     "cosine-similarity": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
