--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.1",
     "replicate": "^0.12.3"
   },
   "devDependencies": {
