--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.12",
+    "playwright": "^1.36.1",
     "replicate": "^0.12.3"
   },
   "devDependencies": {
